--- a/IoTServicesCode/webapp_frontend/app/index.html
+++ b/IoTServicesCode/webapp_frontend/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>DSO - User Interface</title>
 </head>
-<body style="background: linear-gradient(45deg, #49a09d, #5f2c82);">
+<body>
     <h1>Sensor measurements</h1>
 
     <p>List of devices</p>
